Exercicio 35 - Informe o valores do cateto e imprima o valor da hipotenusa

--- a/Projetos/Exercicio_35.1_aula_14_Hipotenusa/.project
+++ b/Projetos/Exercicio_35.1_aula_14_Hipotenusa/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Exercicio_35_aula_14_Hipotenusa</name>
+	<name>Exercicio_35.1_aula_14_Hipotenusa</name>
 	<comment></comment>
 	<projects>
 	</projects>
