--- a/Projetos/Exercicio_39.1_aula_14_Divisão_de_premio/.project
+++ b/Projetos/Exercicio_39.1_aula_14_Divisão_de_premio/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Exercicio_39_aula_14_Divisão_de_premio</name>
+	<name>Exercicio_39.1_aula_14_Divisão_de_premio</name>
 	<comment></comment>
 	<projects>
 	</projects>
