Exercicios 101.1, 101.2 e 101.3 - Faça um programa que leia 10 números e escreva o menor valor lido e o maior valor lido

--- a/Projetos/Exercicio_101.2_aula_19_Menor_Maior_FOR/.project
+++ b/Projetos/Exercicio_101.2_aula_19_Menor_Maior_FOR/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Exercicio_100_aula_19_Pedir_valoreMedia_For_While_DoWhile</name>
+	<name>Exercicio_101.2_aula_19_Menor_Maior_FOR</name>
 	<comment></comment>
 	<projects>
 	</projects>
