--- a/Projetos/Aula_69_Interfaces/.project
+++ b/Projetos/Aula_69_Interfaces/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Aula_66_TempladeMethod</name>
+	<name>Aula_69_Interfaces</name>
 	<comment></comment>
 	<projects>
 	</projects>
