Aulas 88.2 - Lendo e escrevendo em arquivo txt

--- a/Projetos/Aula_88.1_Escrita_em_arquivos/.project
+++ b/Projetos/Aula_88.1_Escrita_em_arquivos/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Aula_88_Leitura_e_Escrita_em_arquivos</name>
+	<name>Aula_88.1_Escrita_em_arquivos</name>
 	<comment></comment>
 	<projects>
 	</projects>
